# model/user_model.go
@@ -1,9 +1,9 @@
 package model
 
 type UserModel struct {
- 	Username string `json:"username" validate:"required,email" example:"user@example.com"`
- 	Password string `json:"password" validate:"required" example:"password123"`
- }
+   	Email    string `json:"email" validate:"required,email" example:"user@example.com"`
+   	Password string `json:"password" validate:"required" example:"password123"`
+  }
 
 type UserRegistrationModel struct {
 	Password string `json:"password" validate:"required,min=6"`
